--- a/app/views/courts/ShowCourtPlayers.scala.html
+++ b/app/views/courts/ShowCourtPlayers.scala.html
@@ -19,7 +19,7 @@
                         <div class="col-sm-4">
 
                             <div class="media">
-                                <a class="pull-left" href="@routes.Courts.getCourt(court.getId)">
+                                <a class="pull-left" href="@routes.Players.playerProfile(player.getId)">
                                     <img class="media-object img-thumbnail" src="@routes.Assets.at("images/basketball.jpg")" alt="..." width="64px">
                                 </a>
 
