--- a/app/views/courts/ShowCourtReviews.scala.html
+++ b/app/views/courts/ShowCourtReviews.scala.html
@@ -3,7 +3,7 @@
 @import courts.CourtMain
 
 @scripts = {
-    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/court.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/court.css")"/>
 }
 
 @CourtMain(title, court, nearby, reviews, players, isLoggedIn, scripts) {
