--- a/app/views/courts/CourtMain.scala.html
+++ b/app/views/courts/CourtMain.scala.html
@@ -101,7 +101,7 @@
                         <button class="btn btn-primary" type="submit" style="width : 100% ;"><span class="glyphicon glyphicon-home"></span> Add Homecourt</button>
                     </div> **@
 
-                    @form(routes.Courts.postFavorite(court.getId)) {
+                    @form(routes.Courts.postFavorite(court.getId, slugify(court.getName))) {
 
                         <div class="courtInfo">
                             <button class="btn btn-primary" type="submit" style="width : 100%;"><span class="glyphicon glyphicon-star"></span>
@@ -110,7 +110,7 @@
                         </div>
                     }
 
-                    @form(routes.Courts.postFavorite(court.getId)) {
+                    @form(routes.Courts.postFavorite(court.getId, slugify(court.getName))) {
                         <div class="courtInfo">
                             <button class="btn btn-primary" type="submit" style="width : 100% ;"><span class="glyphicon glyphicon-envelope"></span> Tell a Friend</button>
                         </div>
