--- a/app/views/courts/CreateReview.scala.html
+++ b/app/views/courts/CreateReview.scala.html
@@ -1,6 +1,7 @@
 @(title: String,  court: Court, reviews: List[Review], reviewForm: Form[forms.CourtReviewForm], isLoggedIn: Boolean)
 
 @import helper._
+@import utils.Tags._
 
 @Main(title, isLoggedIn) {
 <div class="container">
@@ -9,7 +10,7 @@
         <div class="col-md-8">
             <h1 style="margin-bottom:0px">@court.getName</h1>
             <hr/>
-            @form(routes.Courts.postReview(court.getId()), 'class -> "form-horizontal") {
+            @form(routes.Courts.postReview(court.getId, slugify(court.getName)), 'class -> "form-horizontal") {
 
                 @bootstrap3.textarea(reviewForm("review"),
                     rows = "12",
