--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -30,11 +30,11 @@
                     var pos = new google.maps.LatLng(position.coords.latitude,
                     position.coords.longitude);
 
-                    /*var infowindow = new google.maps.InfoWindow({
+                    var infowindow = new google.maps.InfoWindow({
                         map: map,
                         position: pos,
-                        content: 'Location found using HTML5.'
-                    });*/
+                        content: 'You are here.'
+                    });
 
                     map.setCenter(pos);
                     map.setZoom(13)
