--- a/app/views/bootstrap3/hidden.scala.html
+++ b/app/views/bootstrap3/hidden.scala.html
@@ -1,6 +1,6 @@
-@(field: Field)
+@(field: Field, value: Integer)
     
     <input type="hidden"
     name="@field.name",
     id="@field.id",
-    value="@field.value">
+    value=@value>
