--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -5,6 +5,7 @@
 
 @Main(title, isLoggedIn) {
 
+      @if(league.getId() == 1){
       <div id="leagueStart" class="modal fade" data-backdrop="static">
           <div class="modal-dialog">
               <div class="modal-content">
@@ -12,6 +13,12 @@
                 <h2>Create a New League</h2>
                 <h3>Add a name and dates</h3>
                 @form(routes.Leagues.addLeague(), 'class -> "form-horizontal") {
+ 
+                  @bootstrap3.hidden(leagueForm("id"),
+                    value = models.leagues.LeagueDB.size() + 1)
+                    
+                  @bootstrap3.hidden(leagueForm("regStep"),
+                    value = 1)
  
                   @bootstrap3.text(leagueForm("leagueName"),
                     label = "League Name",
@@ -38,7 +45,7 @@
             
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                      <button id="submitButton" id="leagueStart" type="submit" class="btn btn-primary pull-left">
+                      <button id="submitButton" id="leagueStart2" type="submit" class="btn btn-primary pull-left">
                         Next
                       </button>
                       <a href="" data-dismiss="modal" class="btn btn-primary pull-right" role="button">Cancel</a>
@@ -49,13 +56,13 @@
               </div>
           </div>
       </div>
-      
       <script type="text/javascript">
         $(window).load(function(){
           $('#leagueStart').modal('show');
         });
       </script>
-
+      }
+      
   <div class="container">
     
     <div class="row">
