--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -62,7 +62,40 @@
         });
       </script>
       }
-      
+      @if(league.getRegStep() == 1){
+      <div id="leagueStart2" class="modal fade" data-backdrop="static"> 
+          <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-body">
+                <h2>Create a New League</h2>
+                <h3>Add a name and dates</h3>
+                @form(routes.Leagues.addLeague(), 'class -> "form-horizontal") {
+ 
+                  @bootstrap3.selectInt(leagueForm("numTeams"),
+                    label = "Number of Teams",
+                    optionMap = models.leagues.League.num(),
+                    isMultiple = false,
+                    help = "")
+                  
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button id="submitButton" type="submit" class="btn btn-primary pull-left">
+                        Next
+                      </button>
+                      <a href="" data-dismiss="modal" class="btn btn-primary pull-right" role="button">Cancel</a>
+                    </div>
+                  </div>    
+                }
+              </div>
+              </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+        $(window).load(function(){
+          $('#leagueStart2').modal('show');
+        });
+      </script> 
+      }
   <div class="container">
     
     <div class="row">
