change validation email and other small changes

--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -10,7 +10,7 @@
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
         <!--  Load site-specific customizations after bootstrap. -->
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         @scripts
         <meta charset="utf-8">
