--- a/app/views/courts/CourtMain.scala.html
+++ b/app/views/courts/CourtMain.scala.html
@@ -197,7 +197,7 @@
                         </a>
 
                         <div class="media-body">
-                            <h4 class="media-heading">@court.getName</h4>
+                            <h4 class="media-heading"><a id="noColor" href="@routes.Courts.getCourt(court.getId, slugify(court.getName))">@court.getName</a></h4>
                         </div>
                     </div>
                     }
