--- a/app/views/player/PlayerForm.scala.html
+++ b/app/views/player/PlayerForm.scala.html
@@ -54,7 +54,7 @@
     @bootstrap3.textarea(playerForm("bio"),
         rows = "10",
         label = "Bio",
-        placeholder = "I'm Brick Tamland. People seem to like me because I am polite and I am rarely late. I like to eat ice cream and I really enjoy a nice pair of slacks. Years later, a doctor will tell me that I have an I.Q. of 48 and am what some people call mentally retarded. I love lamp.",
+        placeholder = "I have been playing basketball since...",
         help = "Tell us a little about yourself. Please!")
         
     @text(playerForm("lookingFor"),
