--- a/app/views/user/Validate.scala.html
+++ b/app/views/user/Validate.scala.html
@@ -1,4 +1,4 @@
-@(title: String, player: Player, user: User, isLoggedIn: Boolean)
+@(title: String, isLoggedIn: Boolean)
 
 @scripts = {
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/index.css")">
@@ -18,12 +18,10 @@
        <div class="row">
          <div class="col-md-12">
             @if(isLoggedIn){
-                @if(user.getId() == player.getId()) {
                     <br>
-                    <a href="@routes.Players.playerEdit(player.getId())" class="btn btn-primary btn-lg" role="button">
+                    <a href="@routes.Players.playerEdit(Secured.getUserInfo(ctx()).getId())" class="btn btn-primary btn-lg" role="button">
                     <span class="glyphicon glyphicon-user"></span>  Edit your profile @Secured.getUserInfo(ctx()).getName
                     </a>
-                }
             }
          </div>
        </div>
