--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -4,7 +4,40 @@
 @scripts = {
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/courts.css")">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
-    @* <script src="@routes.Assets.at("javascripts/courts-map.js")" type="text/javascript"></script> *@
+
+    <script type="text/javascript">
+        jQuery.noConflict();
+
+        jQuery(function() {
+             jQuery( "#search-button" ).click( function ( e ) {
+                e.preventDefault();
+
+                // get value from text input box
+                var nameval = jQuery('#search').val();
+
+                 // make ajax request for json info about matching courts
+                jsRoutes.controllers.Courts.searchCourts().ajax({
+                    type: 'POST',
+                    contentType: 'application/json',
+                    dataType: 'json',
+                    data: JSON.stringify({
+                        name: nameval
+                    }),
+                    success: function(data) {
+                       jQuery('#search').val('');
+                       var result = "";
+                        for(var i = 0; i < data.courts.length; i++) {
+                            result += '<div><a href="';
+                            result += '/courts/' + data.courts[i].id + '/' + data.courts[i].slug;
+                            result += '">' + data.courts[i].name + '</a></div>';
+                        }
+
+                       jQuery('#courtList' ).html(result);
+                    }
+                });
+            });
+        });
+    </script>
 
     <script type="text/javascript">
 
@@ -51,7 +84,7 @@
 
         var courts = [
             @for(court <- courts) {
-                ['@court.getName', @court.getAddress.getLat, @court.getAddress.getLng, '@court.getDescription', @court.getId],
+                ['@court.getName', @court.getAddress.getLat, @court.getAddress.getLng, '@court.getDescription', @court.getId, '@routes.Courts.getCourt(court.getId, slugify(court.getName))' ],
             }
         ]
 
@@ -66,7 +99,7 @@
                     map : map,
                     title : court[0]
                 });
-                var description = "<b>" + court[0] + "</b></br>" + court[3] + "</br><a href='" + "#" + "'>more info</a>";
+                var description = "<b>" + court[0] + "</b></br>" + court[3] + "</br><a href='" + court[5] + "'>more info</a>";
 
                 bindInfoWindow(marker, map, infowindow, description);
             }
@@ -101,107 +134,48 @@
 
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
+
+
+    <script type="text/javascript" src="@routes.Courts.javascriptRoutes()"></script>
 }
 
 @Main(title, isLoggedIn: Boolean, scripts) {
     <div class="container">
-    <!-- Sorting Dropdown
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="pull-right">
-                Sort By
-                <select id="order-ctrl" size="1">
-                    <option value="alt">Alphabetical</option>
-                    <option value="absdate">Ranking</option>
-                    <option value="date">Most Recent</option>
-                    <option value="r">Popularity</option>
-                </select>
-            </div>
-        </div>
-    </div> -->
 
-    <!-- Gym Form
-    <div class="row">
-        <div class="col-sm-12">
-            <a href="GymForm.html" class="btn-sm btn-primary pull-right active" role="button">Create Gym</a>
-        </div>
-    </div> -->
-
-    <!-- Tab Navigation -->
-    <ul class="nav nav-tabs" data-tabs="tabs">
-        <li class="active"><a href="#map" data-toggle="tab">Map</a></li>
-        <li><a href="#list" data-toggle="tab">List</a></li>
-
-    </ul>
-
-    <!-- Tab Content -->
-    <div id="myTabContent" class="tab-content">
-
-        <!-- Map -->
+            <!-- Map -->
         <div id="map" class="tab-pane fade in active">
-            <div class="row">
+
+           <!-- <div class="row">
                 <div class="col-md-12">
+                    <h1>Basketball Courts in Hawaii</h1>
+                </div>
+            </div> -->
+
+
+            <div class="row">
+                <div class="col-md-9">
                     <div id="map-canvas"></div>
                 </div>
-            </div>
-        </div>
 
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <input id="search" type="text" class="form-control"/>
+                        <span class="input-group-btn">
+                            <button id="search-button" class="btn btn-default" type="button">Search</button>
+                        </span>
+                        </div>
 
-
-        <!-- List -->
-        <div id="list" class="tab-pane fade">
-            <div class="hidden-xs">
-
-                @for((court, index) <- courts.zipWithIndex){
-
-                    @if(index % 3 == 0) {
-                        <div class="row">
-                    }
-
-                        <div class="col-sm-4">
-                            <div class="thumbnail">
-                                <img src="http://www.to-hawaii.com/oahu/beaches/images/kuliououbeach/basketball_court.jpg" alt="...">
-                                <div class="caption">
-                                    <h3>@court.getName</h3>
-                                    <p>@court.getDescription</p>
-                                    <p>
-                                        <a href="@routes.Courts.getCourt(court.getId, slugify(court.getName))" class="btn btn-primary" role="button">View</a>
-                                        <a href="#" class="btn btn-default" role="button">Like</a>
-                                    </p>
-                                </div>
+                        <div id="courtList">
+                        @for(court <- courts) {
+                            <div>
+                                <td><a href="@routes.Courts.getCourt(court.getId, slugify(court.getName))">@court.getName</a></td>
                             </div>
+                        }
                         </div>
-
-                    @if(index % 3 == 2 || index == courts.size()){
-                        </div>
-                    }
-                }
-            </div>
-
-            <!-- List (phone)-->
-            <div class="visible-xs col-xs-12">
-                <div class="row">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Type</th>
-                            </tr>
-                        </thead>
-
-                        <tbody data-link="row" class="rowlink">
-                            @for(court <- courts) {
-                                <tr>
-                                    <td><a href="@routes.Courts.getCourt(court.getId, slugify(court.getName))">@court.getName</a></td>
-                                    <td>@court.getType</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
                 </div>
             </div>
-
         </div>
+
     </div>
-    </div>
+
 }
